kubernetes/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lfm-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /authorization(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lfm-authorization-api
                port:
                  number: 80
          - path: /workstream(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: lfm-workstream-api
                port:
                  number: 80
